ProgettoDSBD_NascaValastro/kubernetes/k8s/mysql-deploymentPost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-follow
spec:
  selector:
    matchLabels:
      app: mysql-post
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-post
    spec:
      containers:
      - image: mysql:5.6.51
        name: mysql-follow
        ports:
        - containerPort: 3406
          name: mysql-follow
        volumeMounts:
        - name: mysql-persistent-storage-postservice
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage-postservice
        persistentVolumeClaim:
          claimName: mysql-pv-claim-postservice
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-follow
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-post
