ProgettoDSBD_NascaValastro/kubernetes/k8s/post.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-backend
spec:
  ports:
    - port: 8080
      targetPort: 5000
  selector:
    app: post-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
spec:
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: post-backend
  template:
    metadata:
      labels:
        app: post-backend
    spec:
      containers:
        - name: post-backend
          image: post-stateless:v1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 5000
              path: /ping
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 5000
              path: /ping
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
